[tool.poetry]
name = "hdproxying"
version = "1.0.0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
