[tool.poetry]
name = "hdproxying"
version = "1.0.0"
description = ""
authors = ["Danilo Paes <danilo.paes@pm.me>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.11.7"
requests = "^2.31.0"
urllib3 = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
black = "^23.12.1"


[tool.black]
line_length = 80
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
